Changed filter bar css and html to remove weird extra space; category bar now gets fixed to top when scrolling past

--- a/PhotoMenu/static/PhotoMenu/CSS/SitePages/RestaurantPage.css
+++ b/PhotoMenu/static/PhotoMenu/CSS/SitePages/RestaurantPage.css
@@ -1,8 +1,3 @@
-/* Header */
-.restaurant-page-desktop{
-    display: none;
-}
-
 /*-------Title and Background------*/
 
 div.header-background{
@@ -52,11 +47,6 @@ p.restaurant-hours::before{
     margin: 0px 5px 0px 0px;
 }
 
-/*--------Categories (filter) and Search Bar------*/
-div.restaurant-page-desktop{
-    width: 100%;
-}
-
 /*-------Menu Categories-------*/
 p.category-description{
     font-size: 13px;
@@ -72,6 +62,7 @@ ul.food-type-section-food-list{
     display: -webkit-flex;
     -webkit-flex-wrap: wrap
 }
+
 
 @media (min-width: 480px) {
     ul.food-type-section-food-list{
@@ -104,16 +95,11 @@ ul.food-type-section-food-list{
 }
 
 @media (min-width: 800px) {
-
     div.background-image-dark-overlay{
         padding: 0px 0px 40px 40px;
     }
-
     h1.restaurant-name{
         padding: 160px 0px 0px 0px;
-    }
-    .restaurant-page-desktop{
-        display: inline-block;
     }
     p.category-description{
         font-size: 16px;
