--- a/PhotoMenu/static/PhotoMenu/CSS/Snippets/FilterSearch.css
+++ b/PhotoMenu/static/PhotoMenu/CSS/Snippets/FilterSearch.css
@@ -4,6 +4,7 @@ div.filter-and-search-section{
     height: 35px;
     text-align: center;
     box-shadow: 0px 1px 1px 0px #9B9B9B;
+    display: none;
 }
 
 ul.filter-options-list{
@@ -100,13 +101,11 @@ div.current-page-search-wrapper{
 }
 
 @media (min-width: 800px){
-
     ul.filter-options-list {
         display: inline-block;
         float: left;
         margin: 0px 0px 0px 20px;
     }
-
     div.current-page-search-wrapper{
         display: inline-block;
         margin: 7px 10px 0px 0px;
@@ -115,7 +114,6 @@ div.current-page-search-wrapper{
         width: 30%;
         max-width: 300px;
     }
-
     input.current-page-search-bar{
         width: calc(100% - 30px);
         height: 27px;
@@ -126,7 +124,6 @@ div.current-page-search-wrapper{
         padding: 0px 0px 0px 7px;
         box-sizing: border-box;
     }
-
     span.current-page-search-icon{
         display: inline-block;
         background-image: url("../../Images/Icons/GreySearchIcon.png");
@@ -137,6 +134,9 @@ div.current-page-search-wrapper{
         position: relative;
         top: 6px;
         left: 3px;
+    }
+    div.filter-and-search-section{
+        display: inline-block;
     }
 
 }
